# TestingWoocommerceAPI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.wordpress  Makefile  README.md  conftest.py  docker-compose.matrix.yml  docker-compose.wp.yml  index.html  matrix.yaml  pyproject.toml  pytest.ini  style.css  updated-gitlab-ci.yml  working version.gitlab-ci.yml
.github-ci/workflows/: ci.yml  dummy_ci.yml  tests.yaml
.gitlab-ci/: ci.yaml
EcommerceAPI/: cli.py  pyproject.toml
EcommerceAPI/plugins/: README_plugins.md  __init__.py  _config.py  allure_autogen.py  api_fixtures.py  config_pytest.py  db_fixtures.py  entities.py  logging_plugin.py  reporting.py
EcommerceAPI/plugins/api/: customers.py  products.py  shared.py
EcommerceAPI/src/api/: customers_api.py
EcommerceAPI/src/api/customers/: customers_api.py
EcommerceAPI/src/api/global/: global_api.py
EcommerceAPI/src/api/shared/: base_api.py
EcommerceAPI/src/auth/: auth_factory.py  auth_resolver.py  base_auth.py  basic_auth.py  jwt_auth.py  oauth1_auth.py  oauth2_auth.py
EcommerceAPI/src/clients/: api_client.py
EcommerceAPI/src/configs/: README.md  config_loader.py  runtime_config.py  runtime_metadata.py
EcommerceAPI/src/core/: http_client.py  http_response.py  request_context.py
EcommerceAPI/src/coupons/dao/: coupons_dao.py
EcommerceAPI/src/coupons/helpers/: coupons_helper.py
EcommerceAPI/src/customers/api/: customers_api.py
EcommerceAPI/src/customers/dao/: customers_dao.py
EcommerceAPI/src/customers/helpers/: customers_helper.py
EcommerceAPI/src/customers/models/: customer_model.py
EcommerceAPI/src/customers/schemas/: customer_model.py  customer_schema_validator.py
EcommerceAPI/src/customers/services/: customer_service.py
EcommerceAPI/src/customers/validators/: MY_README_VALIDATORS.md  README_VALIDATORS.md  customer_assertions.py  customer_db_validators.py  customer_validators.py
EcommerceAPI/src/dao/: __init__.py  products_dao.py
EcommerceAPI/src/dao/coupons/: coupons_dao.py
EcommerceAPI/src/dao/customers/: customers_dao.py
EcommerceAPI/src/dao/orders/: orders_dao.py
EcommerceAPI/src/helpers/: customers_helper.py  orders_helper.py  products_helper.py
EcommerceAPI/src/helpers/coupons/: coupons_helper.py
EcommerceAPI/src/helpers/customers/: customers_helper.py
EcommerceAPI/src/helpers/orders/: orders_helper.py
EcommerceAPI/src/helpers/products/: products_helper.py
EcommerceAPI/src/helpers/shared/: cleanup_helpers.py
EcommerceAPI/src/manual_cleanup_scripts/: coupons_cleaner.py  delete_coupon_individually.py  delete_entities_from_code_and_CLI.py
EcommerceAPI/src/metadata/: entity_metadata.py
EcommerceAPI/src/orders/dao/: orders_dao.py
EcommerceAPI/src/orders/helpers/: orders_helper.py
EcommerceAPI/src/products/api/: products_api.py
EcommerceAPI/src/products/dao/: products_dao.py
EcommerceAPI/src/products/helpers/: products_helper.py
EcommerceAPI/src/products/models/: product_model.py
EcommerceAPI/src/products/validators/: product_db_validators.py  product_validators.py
EcommerceAPI/src/shared/api/: common_api.py
EcommerceAPI/src/shared/assertions/: common_assertions.py
EcommerceAPI/src/shared/helpers/: cleanup_helpers.py
EcommerceAPI/src/utilities/: bulk_ops.py  credentialsUtility.py  custom_logger.py  data_utils.py  date_timestamp_utils.py  dbUtility.py  db_utility.py  entities_registry.py  env_utils.py  exceptions.py  filtering_utils.py  genericUtilities.py  generic_utilities.py  log_context.py  pagination_utils.py  requestsUtility.py  team_discovery.py  truncate_logging_utils.py  wooAPIUtility.py
EcommerceAPI/src/utils/: bulk_ops.py  credentials_utility.py  custom_logger.py  date_timestamp_utils.py  db_utility.py  entities_registry.py  env_utils.py  exceptions.py  filtering_utils.py  generic_utilities.py  log_context.py  pagination_utils.py  performance_utils.py  team_discovery.py  truncate_logging_utils.py
EcommerceAPI/src/validators/base/: base_validators.py
EcommerceAPI/src/validators/customers/: __init__.py  customer_assertions.py  customer_schema_validator.py  customer_validators_base.py
EcommerceAPI/src/validators/shared/: base_validators.py
allure-results/: a45de6f7-fccf-499f-91f6-5a7dbfa0ca6a-attachment.json
data/: behaviors.csv  behaviors.json  categories.csv  categories.json  packages.json  suites.csv  suites.json  timeline.json
docs/: API_TESTING_STANDARDS.md  ARCHITECTURE_QUICK_START.md  CHANGELOG_GUIDELINES.md  CONFIG_CONTRACT.md  CONTRIBUTING.md  DEVELOPER_ONBOARDING.md  ENVIRONMENT_CONFIG_GUIDE.md  FRAMEWORK_OVERVIEW.md  GIT_GITLAB_GUIDE.md  INFRA_explained.md  PLUGINS_REFERENCE.md  PROJECT_FRAMEWORK_ARCHITECTURE_RULES.md  README.PYPROJECT.md  README_ALLURE.md  README_API_CLIENT.md  README_API_FRAMEWORK_EXPLAINED.md  README_API_TESTING_STANDARDS.md  README_ARCHITECTURE.md  README_ARCHITECTURE_QUICK_START.md  README_AUTHENTICATION.md  README_CHANGELOG_GUIDELINES.md  README_CI_ALLURE_GUIDE.md  README_CI_ARCHITECTURE.md  README_CI_ARCHITECTURE_v2.md  README_CI_ARCHITECTURE_v3.md  README_CI_MATRIX.md  README_CONFIG_CONTRACT.md  README_CONTRIBUTING.md  README_DOCKER_INSTALL_GUIDE.md  README_ENVIRONMENT_CONFIG_GUIDE.md  README_ENV_AND_CI.md  README_FRAMEWORK_OVERVIEW.md  README_GIT_GITLAB_SETUP_GUIDE.md  README_GIT_WORKFLOW_HANDBOOK.md  README_INFRA_DOCKER_INSTALL_GUIDE.md  README_LOGGING.md  README_LOGGING_ARCHITECTURE.md  README_PLUGINS_REFERENCE.md  README_PYPROJECT.md  README_QA_DEVELOPER_ONBOARDING.md  (+11 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
integration/: index.html
performance/: index.html
regression/: index.html
scripts/: generate_matrix.py  run-docker-tests.sh  setup.sh
tests/: conftest.py
widgets/: categories-trend.json  categories.json  duration-trend.json  duration.json  environment.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+6982 files in other folders)
